Fixet små problemer bl.a. whitespace/scroll problemet

--- a/css/faq.css
+++ b/css/faq.css
@@ -8,6 +8,7 @@ header{
     top: 70%;
     left: 50%;
     transform: translate(-50%, -50%);
+    font-size: 3em;
 }
 header img{
     height: 7em;
